--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -12,13 +12,13 @@
 				{# <th>Id</th> #}
 				<th>Pseudo</th>
 				<th>Statut de la réservation</th>
-				<th>Date Resa Debut</th>
-				<th>Date Resa Fin</th>
-				<th>Dossier Resa</th>
+				<th>Date de début de Réservation</th>
+				<th>Date de fin de réservation</th>
+				<th>Dossier de réservation n°</th>
 				<th>Acompte</th>
 				<th>Caution</th>
-				<th>Categorie</th>
-				<th>Option</th>
+				<th>Catégorie</th>
+				<th>Options</th>
 				<th>Actions</th>
 			</tr>
 		</thead>
