--- a/templates/visite/edit.html.twig
+++ b/templates/visite/edit.html.twig
@@ -1,13 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifiez votre visite{% endblock %}
+{% block title %}Modifiez votre visite
+{% endblock %}
 
 {% block body %}
-    <h1>Modifiez votre visite</h1>
+	<h1>Modifiez votre visite</h1>
 
-    {{ include('visite/_form.html.twig', {'button_label': 'Modifier'}) }}
+	{{ include('visite/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <button><a href="{{ path('app_visite_index') }}">Retour à la liste</a></button>
+	{% if visite.statut != 'annulée' and is_granted('ROLE_USER') and app.user == visite.user %}
+		<form method="post" action="{{ path('app_visite_cancel', {'id': visite.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette visite ?');">
+			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ visite.id) }}">
+			<button class="btn">Annuler ma visite</button>
+		</form>
+	{% endif %}
 
-    {{ include('visite/_delete_form.html.twig') }}
+	<button>
+		<a href="{{ path('app_visite_index') }}">Retour à la liste</a>
+	</button>
+	{% if is_granted('ROLE_ADMIN') %}
+		{{ include('visite/_delete_form.html.twig') }}
+	{% endif %}
 {% endblock %}
