--- a/templates/reservation/show.html.twig
+++ b/templates/reservation/show.html.twig
@@ -58,12 +58,21 @@
 			</tr>
 		</tbody>
 	</table>
-
+	
+	{% if reservation.statut != 'annulée' and is_granted('ROLE_USER') and app.user == reservation.user %}
+		<form method="post" action="{{ path('app_reservation_cancel', {'id': reservation.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette réservation ?');">
+			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ reservation.id) }}">
+			<button class="btn">Annuler ma réservation</button>
+		</form>
+	{% endif %}
 	
 
 	<a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
 
 	<a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">Modifier</a>
 
+	{% if is_granted('ROLE_ADMIN') %}
 	{{ include('reservation/_delete_form.html.twig') }}
+	{% endif %}
+
 {% endblock %}
