--- a/templates/visite/show.html.twig
+++ b/templates/visite/show.html.twig
@@ -1,31 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Visite{% endblock %}
+{% block title %}Visite
+{% endblock %}
 
 {% block body %}
-    <h1>Visite</h1>
+	<h1>Visite</h1>
 
-    <table class="table">
-        <tbody>
-            
-            <tr>
-                <th>Votre pseudo</th>
-                <td>{{ visite.user.pseudo }}</td>
-            </tr>
-            <tr>
-                <th>Date de Visite</th>
-                <td>{{ visite.dateVisite ? visite.dateVisite|date('d-m-Y') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Date de Réservation Souhaitée</th>
-                <td>{{ visite.dateResaSouhaite ? visite.dateResaSouhaite|date('d/m/Y') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
 
-    <button><a href="{{ path('app_visite_index') }}">Retour à la lsite</a></button>
+			<tr>
+				<th>Votre pseudo</th>
+				<td>{{ visite.user.pseudo }}</td>
+			</tr>
+			<tr>
+				<th>Statut</th>
+				<td>{{ visite.statut }}</td>
+			</tr>
+			<tr>
+				<th>Date de Visite</th>
+				<td>{{ visite.dateVisite ? visite.dateVisite|date('d-m-Y') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Date de Réservation Souhaitée</th>
+				<td>{{ visite.dateResaSouhaite ? visite.dateResaSouhaite|date('d/m/Y') : '' }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <button><a href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a></button>
+	{% if visite.statut != 'annulée' and is_granted('ROLE_USER') and app.user == visite.user %}
+		<form method="post" action="{{ path('app_visite_cancel', {'id': visite.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette visite ?');">
+			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ visite.id) }}">
+			<button class="btn">Annuler ma visite</button>
+		</form>
+	{% endif %}
 
-    {{ include('visite/_delete_form.html.twig') }}
+	<button>
+		<a href="{{ path('app_visite_index') }}">Retour à la liste</a>
+	</button>
+
+	<button>
+		<a href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
+	</button>
+	{% if is_granted('ROLE_ADMIN') %}
+		{{ include('visite/_delete_form.html.twig') }}
+	{% endif %}
 {% endblock %}
